[package]
name = "tiny-lsm"
version = "0.2.2"
edition = "2021"
authors = ["Tyler Neely <t@jujit.su>"]
description = "a dead-simple in-memory blocking LSM tree for constant-sized keys and values"
license = "GPL-3.0"
repository = "https://github.com/spacejam/tiny-lsm"
documentation = "https://docs.rs/tiny-lsm/"

[dependencies]
crc32fast = "1.2.2"
zstd = "0.9.0"
log = "0.4.14"

[dev-dependencies]
fuzzcheck = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
