[package]
name = "tiny-lsm"
version = "0.4.0"
edition = "2021"
authors = ["Tyler Neely <t@jujit.su>"]
description = "a dead-simple in-memory blocking LSM tree for constant-sized keys and values"
license = "GPL-3.0"
repository = "https://github.com/spacejam/tiny-lsm"
documentation = "https://docs.rs/tiny-lsm/"

[profile.dev]
panic = "abort"

[dependencies]
crc32fast = "1.3.0"
zstd = "0.9.0"
log = "0.4.14"

[dev-dependencies]
fuzzcheck = "0.10.1"
env_logger = "0.9.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
